// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "və kig fiz və gʊ˩lf",
    },
    {
      "english": "the dogs see the wolves",
      "target": "və bɔ˥˥gs fi və gʊ˩lfs",
    },
    {
      "english": "i give you the bread",
      "target": "ag giv tʃʊ˩",
    },
    {
      "english": "the king walks at the river",
      "target": "və kig gɔ˥˥kz æθ və dɪvəːt",
    },
    {
      "english": "the king does not see the wolf",
      "target": "və kig datʃe fiz və gʊ˩lf",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "iːllu beːbeː fiːbeːbeːt iːllu lupuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "iːllu kaːneː fiːbeːbeːɳt iːllu lupuum",
    },
    {
      "english": "i give you the bread",
      "target": "eːbo baːbeːo tuum",
    },
    {
      "english": "the king walks at the river",
      "target": "iːllu beːbeː aːbbulaːbeːt iːllu lubeː",
    },
    {
      "english": "the king does not see the wolf",
      "target": "iːllu beːbeː noː fiːbeːbeːt iːllu lupuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "feke leten fukele",
    },
    {
      "english": "the dogs see the wolves",
      "target": "fukele leten fukele",
    },
    {
      "english": "i give you the bread",
      "target": "me tana henaː",
    },
    {
      "english": "the king walks at the river",
      "target": "feke taka faːpu telu",
    },
    {
      "english": "the king does not see the wolf",
      "target": "feke ala leten fukele",
    },
  ],
  "preset": "tokipona",
}
`;
